--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,6 +1,11 @@
 span{
   font-size: 10pt;
   color: white;
+  background-color: black;
+}
+
+.row{
+  background-color: black;
 }
 
 .bg-background-home{
