--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<header>
+<div class="bg-noir">
   <app-header></app-header>
-</header>
-
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
