--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,7 +8,7 @@
   <div class="col-4 d-flex justify-content-end">
     <ul class="nav p-0 m-0" >
 
-    <!-- @if(userToken() === ''){
+    @if(userToken() === ''){
       <li class="nav-item">
         <a class="nav-link text-white"
         [routerLink]="['/account/login']" routerLinkActive="router-link-active border-bottom border-warning" >LOG IN</a>
@@ -25,7 +25,7 @@
         <a class="nav-link text-white" (click)="logout()"
         [routerLink]="['/home']" routerLinkActive="router-link-active text-white">LOG OUT</a>
       </li>
-    } -->
+    }
     </ul>
   </div>
 </nav>
