--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -1,1 +1,96 @@
-<p>register works!</p>
+<div class="row justify-content-center">
+  <div class="card m-5">
+
+    <div class="card-body ps-5 pe-5 pt-5">
+      <h5 class="card-title">Create your account</h5>
+      <p class="text2 pt-3">Star Wars is part of The Walts Disney Family of Companies. You'll be able to log into services and experiences using the same email and password.</p>
+    </div>
+
+    <form [formGroup]="registerForm"
+        class="card-body pb-2 ps-5 pe-5">
+
+      <!------- name ------->
+      <div class="mb-4">
+        <input type="name" class="form-control" placeholder="Enter your name" formControlName="name" required
+        [ngClass]="{'
+          is-invalid': registerForm.get('name')?.invalid && registerForm.get('name')?.touched,
+          'is-valid': registerForm.get('name')?.valid && registerForm.get('name')?.touched,
+        }">
+         @if (registerForm.get('name')?.invalid && registerForm.get('name')?.touched) {
+          <span class="text3 text-danger">Name is required</span>
+        }
+      </div>
+
+
+
+
+      <!------- email ------->
+      <div class="pb-4">
+        <input type="email" class="form-control" placeholder="Enter your email" formControlName="email" required
+        [ngClass]="{'
+          is-invalid': registerForm.get('email')?.invalid && registerForm.get('email')?.touched,
+          'is-valid': registerForm.get('email')?.valid && registerForm.get('email')?.touched,
+        }">
+        @if (registerForm.get('email')?.invalid && registerForm.get('email')?.touched) {
+          <span class="text3 text-danger">Email is required</span>
+        }
+        @else if (repeatedEmail) {
+          <span class="text3 text-danger">Email already registered</span>
+        }
+      </div>
+
+
+
+     <!----- password ------->
+      <div class="mb-4">
+        <input type="password" class="form-control" placeholder="Create password" formControlName="password" required
+        [ngClass]="{'
+        is-invalid': registerForm.get('password')?.invalid && registerForm.get('password')?.touched,
+        'is-valid': registerForm.get('password')?.valid && registerForm.get('password')?.touched,
+      }">
+      @if (registerForm.get('password')?.invalid && registerForm.get('password')?.touched) {
+        @if(registerForm.get('password')?.hasError('required')) {
+          <span class="text3 text-danger">Password is required</span>
+        }
+        @else if(registerForm.get('password')?.hasError('invalidPassword')) {
+          <ul class="text3 text-danger">
+            Password must have:
+            <li class="text3 text-danger">At least one lowercase letter</li>
+            <li class="text3 text-danger">At least one uppercase letter</li>
+            <li class="text3 text-danger">At least one number</li>
+            <li class="text3 text-danger">Minimum length of 8 characters</li>
+          </ul>
+        }
+      }
+      </div>
+
+
+
+       <!------- checkbox ------->
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input">
+        <label class="form-check-label text3 text-secondary">Yes! I would like to receive by email special offers and updates about Lucasfilm Ltd. and other products and services from The Walt Disney Family of Companies.</label>
+      </div>
+
+      <div>
+        <p class="text3 text-secondary">By creating an account, you agree to our Terms of Use, and acknowledge that you have read our Privacy Policy, Cookies Policy and UK & EU Privacy Rights.</p>
+      </div>
+
+      <!------- button submit ------->
+      <div class="row justify-content-center pt-3 ps-3 pe-3">
+        <button type="submit" class="btn btn-warning"
+        (click)="register()">Create an account</button>
+        <a routerLink="home" routerLinkActive="router-link-active" class="btn btn-outline-secondary mt-2">Cancel</a>
+      </div>
+
+    </form>
+
+    <div class="card-body pb-3 ps-5 pe-5">
+      <hr>
+      <img class="pb-3" src="/assets/images/disney.png" alt="disney family companies">
+    </div>
+
+  </div>
+</div>
+
+
