--- a/src/app/components/starships/ship-card/ship-card.component.html
+++ b/src/app/components/starships/ship-card/ship-card.component.html
@@ -33,5 +33,22 @@
   </div>
   </div>
 
+ @defer (when pilotsLoaded){
+    @if (pilots.length > 0) {
+      <app-pilots [pilotsURLs]="pilots"></app-pilots>
+    }
+  } @placeholder {
+    <span>Loading pilots...</span>
+  }
+
+
+  @defer (when filmsLoaded){
+    @if (films.length > 0) {
+      <app-films [filmsURLs]="films"></app-films>
+    }
+  } @placeholder {
+    <span>Loading films...</span>
+  }
+
 </div>
 
