--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,24 +6,21 @@
     <img class="logo" src="./assets/images/starwars.png" alt="logo star wars">
   </div>
   <div class="col-4 d-flex justify-content-end">
-    <ul class="nav p-0 m-0" >
+    <ul class="nav p-0 m-0 me-5" >
 
     @if(userToken() === ''){
       <li class="nav-item">
-        <a class="nav-link text-white"
-        [routerLink]="['/login']" routerLinkActive="router-link-active border-bottom border-warning" >LOG IN</a>
+        <a class="nav-link text-white" (click)='openLogIn()'>LOG IN</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white"
-        [routerLink]="['/register']" routerLinkActive="router-link-active border-bottom border-warning">SIGN UP</a>
+        <a class="nav-link text-white" (click)="openRegister()">SIGN UP</a>
       </li>
     }@else{
       <li class="nav-item">
         <p class="nav-link text-warning">May the Force be with you!</p>
       </li>
-      <li>
-        <a class="nav-link text-white" (click)="logout()"
-        [routerLink]="['/home']" routerLinkActive="router-link-active text-white">LOG OUT</a>
+      <li class="nav-item">
+        <a class="nav-link text-white" (click)="logout()">LOG OUT</a>
       </li>
     }
     </ul>
@@ -41,5 +38,7 @@
       [routerLink]="['/starships']" routerLinkActive="router-link-active border-bottom border-warning text-white">STARSHIPS</a>
     </li>
   </ul>
+
 </nav>
+
 
