--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 
+
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -35,11 +36,11 @@ $starwars-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-/* /* /* Importing Bootstrap SCSS file. */
+/* Importing Bootstrap SCSS file. */
 /* @import 'bootstrap/scss/bootstrap';
 @import "bootstrap/scss/variables-dark"; */
 
-:root{
+:root, body {
   background-color: black;
 
 }
