--- a/src/app/components/auth/login/login.component.scss
+++ b/src/app/components/auth/login/login.component.scss
@@ -1,3 +1,11 @@
+:root{
+  background-color: black;
+}
+
+body, .login{
+  background-color: black;
+}
+
 .card{
   border-radius: 25pt;
   width: 40%;
@@ -16,13 +24,14 @@
 
 .text1{
   font-family:Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 10pt;
+  font-size: 8pt;
   font-weight: bold;
 }
 
 .text2{
-  font-family: 'Roboto', sans-serif;
-  font-size: 10pt;
+  // font-family: 'Roboto', sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 8pt;
 
 }
 
@@ -32,7 +41,7 @@
 }
 
 img{
-  width: 270pt;
+  width: 100%;
 }
 
 .form-label{
