--- a/src/app/components/starships/starships.component.html
+++ b/src/app/components/starships/starships.component.html
@@ -1,10 +1,6 @@
 <div class="container">
 
- <!--  infinite-scroll
-  [infiniteScrollDistance]="1"
-  [infiniteScrollThrottle]="300"
-  (scrolled)="scrollDown()"
-  (scrolledUp)="scrollUp()"> -->
+
 
   @for (starship of starshipsData ; track starship.id){
 
@@ -20,6 +16,13 @@
   }@empty(){
     <p>Loading...</p>
   }
+<div
+  infinite-scroll
+  [infiniteScrollDistance]="1"
+  [infiniteScrollThrottle]="300"
+  (scrolled)="scrollDown()"
+  (scrolledUp)="scrollUp()">
 
+</div>
 </div>
 
