--- a/src/app/components/starships/starships.component.html
+++ b/src/app/components/starships/starships.component.html
@@ -1,10 +1,14 @@
-<div class="container">
-
-
+<div class="container"
+  infiniteScroll
+  [infiniteScrollDistance]="1"
+  [infiniteScrollThrottle]="300"
+  (scrolled)="loadStarships()"
+  (scrolledUp)="scrollUp()">
 
   @for (starship of starshipsData ; track starship.id){
 
     <div class="row d-flex justify-content-center">
+
       <div class="card w-75 bg-dark m-4">
         <div class="card-body" (click)="viewShip(starship.id)">
           <h6 class="card-title">{{ starship.name.toUpperCase() }}</h6>
@@ -16,13 +20,6 @@
   }@empty(){
     <p>Loading...</p>
   }
-<div
-  infinite-scroll
-  [infiniteScrollDistance]="1"
-  [infiniteScrollThrottle]="300"
-  (scrolled)="scrollDown()"
-  (scrolledUp)="scrollUp()">
 
-</div>
 </div>
 
