--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,8 +1,7 @@
-<div class="container m-5 justify-content-center">
-  <div class="card w-100 m-5">
-    <div class="card-body text-center ">
-      <h1 class="card-title text-white p-5">This is not the way...</h1>
-     <!--  <button type="button" class="btn btn-warning btn-lg mb-5"
-      [routerLink]="['/home']" routerLinkActive="router-link-active">HOME</button> -->
+<div class="container mt-5 justify-content-center">
+  <div class="card w-100 mt-5">
+    <div class="card-body text-center mt-5 ">
+      <h3 class="card-title text-warning mt-5">This is not the way...</h3>
+
     </div>
 </div>
