--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -23,7 +23,7 @@
           'is-valid': loginForm.get('email')?.valid && loginForm.get('email')?.touched,
         }">
         @if (loginForm.get('email')?.invalid && loginForm.get('email')?.touched) {
-          <span class="text3 text-danger">Email is required</span>
+          <span class="text3 text-danger">*Email is required</span>
         }
       </div>
 
@@ -35,7 +35,7 @@
           'is-valid': loginForm.get('password')?.valid && loginForm.get('password')?.touched,
         }"  >
         @if (loginForm.get('password')?.invalid && loginForm.get('password')?.touched) {
-          <span class="text3 text-danger">Password is required</span>
+          <p class="text3 text-danger pt-2">*Password is required</p>
         }
       </div>
 
